@@ -20,6 +20,31 @@ extern "C" {
  * WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 */
 
+// support for hiding v4 addresses from outputs
+const char*
+inet_ntop_hide(int af, const void *src, char *dst, socklen_t size) {
+    switch ( af ) {
+        case AF_INET:
+            return(inet_ntop4_hide(src, dst, size));
+        default:
+            return NULL;
+    }
+    /* NOTREACHED */
+}
+const char*
+inet_ntop4_hide(const unsigned char *src, char *dst, socklen_t size) {
+    static const char *fmt = "%s.%s.%s.%u";
+    char tmp[sizeof "255.255.255.255"];
+
+    if ( (size_t)sprintf(tmp, fmt, "*","*","*", src[3]) >= size ) {
+        return NULL;
+    }
+    strcpy(dst, tmp);
+
+    return dst;
+}
+
+
 #ifndef HAVE_INET_NTOP
 #define NS_INT16SZ       2
 #define NS_INADDRSZ     4
@@ -54,6 +79,7 @@ inet_ntop(int af, const void *src, char *dst, socklen_t size) {
     /* NOTREACHED */
 }
 
+
 /* const char *
  * inet_ntop4(src, dst, size)
  *      format an IPv4 address
@@ -66,7 +92,7 @@ inet_ntop(int af, const void *src, char *dst, socklen_t size) {
  *      Paul Vixie, 1996.
  */
 const char*
-inet_ntop4(const unsigned char *src, char *dst, socklen_t size) {
+inet_ntop4(const unsigned char *src, char *dst, socklen_t size, bool hide_ips) {
     static const char *fmt = "%u.%u.%u.%u";
     char tmp[sizeof "255.255.255.255"];
 
@@ -182,4 +208,3 @@ inet_ntop6(const unsigned char *src, char *dst, socklen_t size) {
 #ifdef __cplusplus
 } /* end extern "C" */
 #endif
-
