@@ -67,14 +67,17 @@
  * while -1 (0xFFFFFFFF) is a valid IP address (255.255.255.255).
  */
 
+const char* inet_ntop_hide(int af, const void *src, char *dst, socklen_t size);
+const char* inet_ntop4_hide(const unsigned char *src, char *dst, socklen_t size);
+
 #ifndef HAVE_INET_NTOP
 
-    #ifdef __cplusplus
+#ifdef __cplusplus
 extern "C" {
 #endif
 const char* inet_ntop(int af, const void *src, char *dst, socklen_t size);
-const char* inet_ntop4(const unsigned char *src, char *dst,
-                      socklen_t size);
+const char* inet_ntop4(const unsigned char *src, char *dst, socklen_t size);
+
 #ifdef HAVE_IPV6
 const char* inet_ntop6(const unsigned char *src, char *dst,
                       socklen_t size);
