@@ -1,4 +1,4 @@
-#define IPERF_VERSION "2.1.4-tapdev"
-#define IPERF_VERSION_DATE "1 August 2021"
+#define IPERF_VERSION "2.1.4-rc"
+#define IPERF_VERSION_DATE "5 August 2021"
 #define IPERF_VERSION_MAJORHEX 0x00020001
 #define IPERF_VERSION_MINORHEX 0x00040001
