@@ -41,6 +41,9 @@ MBytes, GBytes (see NOTES for more)
 .BR -h ", " --help " "
 print a help synopsis
 .TP
+.BR "    --hide-ips "
+obscure ip addresses in output (useful when wanting to publish results and not display the full ip addresses. v4 only)
+.TP
 .BR -i ", " --interval " < \fIt\fR | f >"
 sample or display interval reports every \fIt\fR seconds (default) or every frame or burst, i.e. if f is used then the interval will be each frame or burst. The frame interval reporting is experimental.  Also suggest a compile with fast-sampling, i.e. ./configure --enable-fastsampling
 .TP
