@@ -10,6 +10,8 @@ o Add support for TCP_WINDOW_CLAMP
 o Rework recvn() and writen() for when SO_SNDTIMEO and SO_RCVTIMEO are enabled
 o Add support for --histograms on select with --tcp-write-prefetch
 o Add support for bind to device on the listener, i.e. iperf -s -i 1 -e -B 0.0.0.0%eth0, will only accept/receive on the eth0 interface
+o Add support for virtual/tap interfaces
+o Add support for --hide-ips (don't show the ip addresses in the report outputs)
 
 2.1.3 change set as of (July 13, 2021)
 --------------------------------------
